# openrazer

./: .bumpversion.cfg  .deepsource.toml  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  activate_driver.sh  deactivate_driver.sh  index.html  install_driver.sh  install_driver_debian.sh  openrazer.spec  package_for_debian.sh  package_for_ubuntu.sh  params.json  reset.sh  set_reactive.sh  set_spectrum.sh  set_static.sh  set_wave.sh  test-device.py  test_custom.sh  test_daemon.sh  update.sh
.builds/: alpine.yml  (+1 more)
daemon/: Makefile  librazer_chroma.da  openrazer-daemon.service  org.razer.conf  org.razer.service  pyproject.toml  razer_bcd  razer_bcd_debug_shared  razer_bcd_debug_static  razer_bcd_static  razer_daemon.c  razer_daemon.do  razer_daemon.h  razer_daemon_dbus.c  razer_daemon_dbus.do  razer_daemon_dbus.h  razer_daemon_effects.c  razer_daemon_effects.do  razer_daemon_effects.h  razer_daemon_libraries.c  razer_daemon_libraries.do  razer_daemon_libraries.h  razer_daemon_parameters.c  razer_daemon_parameters.do  razer_daemon_parameters.h  razer_daemon_render_nodes.c  razer_daemon_render_nodes.do  razer_daemon_render_nodes.h  razer_daemon_types.c  razer_daemon_types.do  razer_daemon_types.h  run_openrazer_daemon.py  run_razer_daemon.py  setup.py
daemon/fx/: Makefile  pez2001_collection.c  pez2001_collection.do  pez2001_collection.h  pez2001_compute_fft.c  pez2001_compute_fft.h  pez2001_light_blast.c  pez2001_light_blast.do  pez2001_mixer.c  pez2001_mixer.do  pez2001_mixer.h  pez2001_progress_bar.c  pez2001_progress_bar.do
daemon/openrazer_daemon/: __init__.py  daemon.py  device.py  keyboard.py  screensaver-monitor.py
daemon/openrazer_daemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
daemon/openrazer_daemon/dbus_services/: __init__.py  service.py
daemon/openrazer_daemon/hardware/: __init__.py  accessory.py  core.py  device_base.py  headsets.py  keyboards.py  monitor.py  mouse.py  mouse_mat.py  mug.py
daemon/openrazer_daemon/misc/: autosave_persistence.py  battery_notifier.py  complex_effect.py  complex_effect_catalogue.py  complex_reactive_effect.py  dpi_notifier.py  effect_sync.py  fire_effect.py  key_binding_management.py  key_binding_manager.py  key_event_management.py  macro.py  ripple_effect.py  screensaver_monitor.py  sleep_state_monitor.py  utils.py  wheel_effect.py
daemon/razer_daemon/: daemon.py  device.py  keyboard.py
daemon/razer_daemon/dbus_services/: __init__.py  service.py
daemon/razer_daemon/hardware/: __init__.py  core.py  device_base.py  headsets.py  keyboards.py  mouse.py  mouse_mat.py  mug.py
daemon/razer_daemon/misc/: battery_notifier.py  effect_sync.py  key_event_management.py  key_mapping.py  macro.py  ripple_effect.py  screensaver_handler.py  screensaver_monitor.py  screensaver_thread.py
daemon/resources/: openrazer-daemon.systemd.service.in  org.razer.service.in  razer-daemon.systemd.service.in  razer-service.conf  razer.conf
daemon/resources/man/: openrazer-daemon.8  openrazer-daemon.8.scd  razer-daemon.8  razer-service.8  razer.conf.5  razer.conf.5.scd
daemon/tests/: test_effect_sync.py  test_high_level_device.py  test_screensaver_thread.py
pylib/: Makefile  daemon_dbus.py  keyboard.py  pyproject.toml  setup.py
pylib/docs/: Makefile  conf.py  device.rst  device_manager.rst  examples.rst  fx.rst  index.rst  intro.rst  make.bat
pylib/openrazer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pylib/openrazer/_fake_driver/: __init__.py  lianlio11dynamic-razeredition.cfg  razerabyssus.cfg  razerabyssus1800.cfg  razerabyssus2000.cfg  razerabyssus2014.cfg  razerabyssuselited.vaedition.cfg  razerabyssuselitedvaedition.cfg  razerabyssusessential.cfg  razerabyssusv2.cfg  razeranansi.cfg  razeratherisreceiver.cfg  razerbarracuda.cfg  razerbasestationchroma.cfg  razerbasestationv2chroma.cfg  razerbasilisk.cfg  razerbasiliskessential.cfg  razerbasiliskmobilereceiver.cfg  razerbasiliskmobilewired.cfg  razerbasiliskultimate.cfg  razerbasiliskultimatereceiver.cfg  razerbasiliskultimatewired.cfg  razerbasiliskv2.cfg  razerbasiliskv3.cfg  razerbasiliskv335k.cfg  razerbasiliskv3pro35khyperfluxv2.cfg  razerbasiliskv3pro35kphantomgreeneditionwired.cfg  razerbasiliskv3pro35kphantomgreeneditionwireless.cfg  razerbasiliskv3pro35kwired.cfg  razerbasiliskv3pro35kwireless.cfg  razerbasiliskv3prowired.cfg  razerbasiliskv3prowireless.cfg  razerbasiliskv3xhyperspeed.cfg  razerbasiliskxhyperspeed.cfg  razerblacksharkv2pro2.4.cfg  razerblacksharkv3.cfg  razerblacksharkv3pro.cfg  razerblacksharkv3prowired.cfg  (+306 more)
pylib/razer/: daemon_dbus.py  keyboard.py
(+543 files in other folders)
