# SPDX-License-Identifier: GPL-2.0-or-later

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openrazer"
version = "3.9.0"
description = "Library for interacting with the OpenRazer daemon."
license = {text = "GPL-2.0-or-later"}
authors= [{ name = "OpenRazer contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "dbus-python >= 1.2.0",
    "numpy >= 1.11.0",
    "openrazer_daemon == 3.9.0",
]

[project.urls]
"Homepage" = "https://openrazer.github.io/"
"Bug Tracker" = "https://github.com/openrazer/openrazer/issues"
"Source Code" = "https://github.com/openrazer/openrazer/tree/master/pylib"

[tool.setuptools.packages.find]
exclude = ["tests.*", "openrazer._fake_driver"]
